--- a/Festival-App/Festival-App/Info.plist
+++ b/Festival-App/Festival-App/Info.plist
@@ -50,5 +50,7 @@
 	<string>This app requires access to maps.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app requires access to maps.</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
