--- a/Festival-App/Festival-App/Info.plist
+++ b/Festival-App/Festival-App/Info.plist
@@ -20,6 +20,22 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app requires access to maps.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app requires access to maps.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app requires access to maps.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -39,17 +55,6 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app requires access to maps.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This app requires access to maps.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app requires access to maps.</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
