--- a/Festival-App/Festival-App/Info.plist
+++ b/Festival-App/Festival-App/Info.plist
@@ -57,5 +57,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
