--- a/Festival-App/Podfile
+++ b/Festival-App/Podfile
@@ -14,6 +14,8 @@ target 'Festival-App' do
   pod 'AWSS3'
   pod 'NVActivityIndicatorView'
   pod 'lottie-ios'
+  pod 'Firebase/Database'
+  pod 'Firebase/Auth'
 
   target 'Festival-AppTests' do
     inherit! :search_paths
