--- a/Festival-App/Podfile
+++ b/Festival-App/Podfile
@@ -17,6 +17,7 @@ target 'Festival-App' do
   pod 'lottie-ios'
   pod 'Firebase/Database'
   pod 'Firebase/Auth'
+  pod 'Firebase/Core'
 
   target 'Festival-AppTests' do
     inherit! :search_paths
