--- a/Festival-App/Podfile
+++ b/Festival-App/Podfile
@@ -18,6 +18,7 @@ target 'Festival-App' do
   pod 'Firebase/Database'
   pod 'Firebase/Auth'
   pod 'Firebase/Core'
+  pod 'SwiftLint'
 
   target 'Festival-AppTests' do
     inherit! :search_paths
