Halfway through Sonar support

--- a/Festival-App/sonar-project.properties
+++ b/Festival-App/sonar-project.properties
@@ -25,6 +25,7 @@ sonar.password=admin
 sonar.projectKey=com.Octavian.Festival-App
 sonar.projectName=Festival-App
 sonar.projectDescription=Ann app with festival features
+sonar.projectVersion=1.0
 
 # Comment if you have a project with mixed ObjC / Swift
 sonar.language=swift
